[package]
name = "marked-yaml"
version = "0.0.1"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We lock the yaml-rust version down hard for now
yaml-rust = "=0.4.3"
