[package]
name = "marked-yaml"
version = "0.3.0"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"
description = "A simplified YAML structure with provenance spans"
homepage = "https://github.com/kinnison/marked-yaml/"
repository = "https://github.com/kinnison/marked-yaml.git"
readme = "README.md"
keywords = ["yaml", "provenance"]
categories = ["data-structures", "encoding", "parsing"]
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
doc-comment = "0.3"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
